--- a/nginx_service.yaml
+++ b/nginx_service.yaml
@@ -1,61 +1,26 @@
 ---
-
-
-
-
-apiVersion: v1
-
-
-kind: Service
-
-
+apiVersion: "apps/v1"
+kind: "Deployment"
 metadata:
-
-
- name: nginx
-
-
- namespace: default
-
-
- labels:
-
-
-   app: nginx
-
-
- annotations:
-
-
-   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
-
-
+  name: "nginx-1"
+  namespace: "default"
+  labels:
+    app: "nginx-1"
 spec:
-
-
- externalTrafficPolicy: Local
-
-
- ports:
-
-
- - name: http
-
-
-   port: 80
-
-
-   protocol: TCP
-
-
-   targetPort: 80
-
-
- selector:
-
-
-   app: nginx
-
-
- type: LoadBalancer
+  replicas: 3
+  selector:
+    matchLabels:
+      app: "nginx-1"
+  template:
+    metadata:
+      labels:
+        app: "nginx-1"
+    spec:
+      containers:
+      - name: "nginx-1"
+        image: "nginx:latest"
+---
+apiVersion: "autoscaling/v2"
+kind: "HorizontalPodAutoscaler"
+metadata:
 
